# styx-emulator

./: .devcontainer.json  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .guix-channel  .pre-commit-config.yaml  .taplo.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  LAYOUT.md  LICENSE  MIGRATION.md  Makefile  README.md  UPSTREAM_ISSUES.md  cliff.toml  guix.scm  justfile  nogpl.deny.toml  requirements.txt  rust-toolchain.toml
data/test-binaries/: Cargo.toml
data/test-binaries/aarch64-gdbsim-data/: Dockerfile  Makefile  build.sh  ldnr.s  stn_multiple.s  stn_single.s  testutils.inc  xtl.s
data/test-binaries/arm/big_endian_generic/: .gitignore  Cargo.toml  Dockerfile  Makefile  testutils.inc
data/test-binaries/arm/cyclone_v/: README.md
data/test-binaries/src/: lib.rs
data/test-binaries/styx-blackfin-testdata/: Cargo.toml  README.md  build.rs
data/test-binaries/styx-hexagon-testdata/: Cargo.toml  LICENSE  README.md  build.rs
examples/debugging-with-gdb/: Cargo.toml  README.md
examples/debugging-with-gdb/src/: main.rs
examples/diy-processor/: Cargo.toml  README.md
examples/diy-processor/src/: main.rs
examples/fuzzer-plugin/: Cargo.toml  README.md  branches.txt
examples/fuzzer-plugin/src/: main.rs
examples/kinetis21-interrupt-angr/: Cargo.toml  README.md  build.rs  hackme.py  make_binaries.sh  proc.py
examples/kinetis21-interrupt-angr/src/: main.rs
examples/multiple-processors/: Cargo.toml  README.md
examples/multiple-processors/src/: main.rs
examples/ppc405-freertos-demo/: Cargo.toml  README.md
examples/ppc405-freertos-demo/src/: main.rs
examples/raw-processor/: Cargo.toml  README.md  load.yaml
examples/raw-processor/src/: main.rs
examples/styx-devices/: Cargo.toml  README.md
examples/styx-devices/src/: main.rs
examples/talking-to-peripherals/: Cargo.toml  README.md
examples/talking-to-peripherals/src/: main.rs
examples/using-a-processor/: Cargo.toml  README.md
examples/using-a-processor/src/: main.rs
examples/using-processor-hooks/: Cargo.toml  README.md
examples/using-processor-hooks/src/: proc.rs  user.rs
extensions/dt-stats/: Cargo.toml  README.md
extensions/dt-stats/scripts/: bus_member_count.jq  bus_member_count_addrs.jq  periph_count.jq  periph_count_addrs.jq  zephyr_run.bash
extensions/dt-stats/src/: main.rs
extensions/styx-ptrace/: Cargo.toml
extensions/styx-ptrace/src/: ptrace-main.rs
incubation/styx-be-arm-processor/: Cargo.toml
incubation/styx-be-arm-processor/src/: main.rs
incubation/styx-cow/: Cargo.toml  readme.md
incubation/styx-cow/benches/: benchmark.rs
incubation/styx-cow/src/: lib.rs  main.rs
incubation/styx-macros-args/: Cargo.toml  README.md
incubation/styx-macros-args/src/: lib.rs
incubation/styx-pcs/: Cargo.toml
incubation/styx-pcs/src/: config.rs  lib.rs  processor.rs
incubation/styx-pcs/tests/: uart.rs
incubation/styx-uconf/: Cargo.toml
incubation/styx-uconf-cli/: Cargo.toml
incubation/styx-uconf-cli/src/: main.rs
incubation/styx-uconf-cli/tests/: uconf_complete.rs
incubation/styx-uconf/src/: components.rs  core_components.rs  lib.rs  mapper.rs
incubation/trace-tools/: Cargo.toml  README.md
incubation/trace-tools/src/: data_recorder.rs  emu_observer.rs  event.rs  fsink.rs  identity.rs  lib.rs  post_analysis.rs  strace.rs  svcutil.rs  util.rs  variable.rs
styx/: Cargo.toml  README.md
styx/benches/: pcode_backend.rs  pcode_register_hooks.rs  pcode_vs_unicorn_ppc.rs  snapshots.rs
styx/bindings/: Cargo.toml  README.md  haiku.txt  rust-toolchain.toml
styx/bindings/styx-c-api/: .gitignore  Cargo.toml  build.rs  cbindgen.toml  pybindgen.toml
styx/bindings/styx-py-api/: Cargo.toml  justfile  pyproject.toml
styx/core/: Cargo.toml  README.md
styx/core/macrolib/: Cargo.toml
styx/core/src/: lib.rs
styx/core/styx-arch-utils/: Cargo.toml
styx/core/styx-cpu/: Cargo.toml  README.md
styx/core/styx-cpu-pcode-backend/: Cargo.toml
styx/core/styx-cpu-type/: Cargo.toml
styx/core/styx-cpu-unicorn-backend/: Cargo.toml
styx/core/styx-errors/: Cargo.toml
styx/core/styx-grpc/: Cargo.toml  build.rs
styx/core/styx-loader/: Cargo.toml
styx/core/styx-loader-mock/: Cargo.toml
styx/core/styx-macros/: Cargo.toml
styx/core/styx-memory/: Cargo.toml
styx/core/styx-memory-type/: Cargo.toml
styx/core/styx-peripheral-clients/: Cargo.toml
styx/core/styx-processor/: Cargo.toml
styx/core/styx-processor-type/: Cargo.toml
styx/core/styx-sync/: Cargo.toml
styx/core/styx-tracebus/: Cargo.toml  README.md
styx/core/styx-util/: Cargo.toml
styx/db/: README.md
styx/db/dbmodel/: Cargo.toml
styx/db/dbutil/: Cargo.toml
styx/db/migration/: Cargo.toml
styx/devices/: Cargo.toml
styx/devices/src/: adc.rs  dac.rs  eeprom.rs  lib.rs
styx/event-controllers/: Cargo.toml
styx/event-controllers/src/: lib.rs
styx/idl/proto/: emulation.proto  emulation_registry.proto  ethernet.proto  i2c.proto  processor.proto  spi.proto  traceapp.proto  uart.proto
styx/integration-tests/: Cargo.toml
styx/integration-tests/src/: gdb_core_integration_test_suite.rs  gdb_harness.rs  lib.rs  runner.rs  uart_integration.rs
styx/peripherals/: Cargo.toml
styx/peripherals/src/: lib.rs
styx/peripherals/styx-base-clock/: Cargo.toml
styx/peripherals/styx-spi/: Cargo.toml
styx/peripherals/styx-uart/: Cargo.toml
styx/plugins/: Cargo.toml  README.md
styx/plugins/src/: lib.rs  testing_utils.rs
styx/plugins/styx-debug-tools/: Cargo.toml
styx/plugins/styx-fuzzer/: Cargo.toml  GetBranches.java  README.md
styx/plugins/styx-gdbserver/: Cargo.toml
styx/plugins/styx-trace-plugin/: Cargo.toml
styx/plugins/tracing-plugins/: Cargo.toml
styx/processors/: Cargo.toml
styx/processors/src/: lib.rs
styx/services/: README.md
styx/services/styx-emulation-registry-service/: Cargo.toml
styx/services/styx-emulation-service/: Cargo.toml
styx/services/styx-traceapp-service/: Cargo.toml
styx/services/styx-workspace-service/: Cargo.toml
styx/src/: lib.rs
styx/workspace-hack/: Cargo.toml  build.rs
styx/workspace-hack/src/: lib.rs
(+2520 files in other folders)
