[workspace]
exclude = [
  "./styx/db",
  "./styx/benches",
  "./styx/generated",
  "./styx/idl",
  "./styx/bindings",
]
members = [
  "./util/xtask",
  "./examples/debugging-with-gdb",
  "./examples/diy-processor",
  "./examples/fuzzer-plugin",
  "./examples/kinetis21-interrupt-angr",
  "./examples/multiple-processors",
  "./examples/ppc405-freertos-demo",
  "./examples/raw-processor",
  "./examples/styx-devices",
  "./examples/talking-to-peripherals",
  "./examples/using-a-processor",
  "./examples/using-processor-hooks",
  "./examples/external-backend",
  "./incubation/trace-tools",
  "./incubation/styx-cow",
  "./incubation/styx-macros-args",
  "./incubation/styx-be-arm-processor",
  "./data/test-binaries",
  "./data/test-binaries/arm/big_endian_generic",
  "./data/test-binaries/styx-blackfin-testdata",
  "./styx",
  "./styx/core/",
  "./styx/core/macrolib",
  "./styx/core/styx-arch-utils",
  "./styx/core/styx-cpu-pcode-backend",
  "./styx/core/styx-cpu-pcode-backend/styx-pcode",
  "./styx/core/styx-cpu-pcode-backend/styx-pcode-sleigh-backend",
  "./styx/core/styx-cpu-pcode-backend/styx-sla",
  "./styx/core/styx-cpu-pcode-backend/styx-sleigh-bindings",
  "./styx/core/styx-cpu-pcode-backend/styx-pcode-translator",
  "./styx/core/styx-cpu-type",
  "./styx/core/styx-cpu-unicorn-backend",
  "./styx/core/styx-errors",
  "./styx/core/styx-grpc",
  "./styx/core/styx-loader",
  "./styx/core/styx-loader-mock",
  "./styx/core/styx-macros",
  "./styx/core/styx-memory",
  "./styx/core/styx-memory-type",
  "./styx/core/styx-peripheral-clients",
  "./styx/core/styx-processor-type",
  "./styx/core/styx-processor",
  "./styx/core/styx-sync",
  "./styx/core/styx-tracebus",
  "./styx/core/styx-util",
  "./styx/db/dbmodel",
  "./styx/db/dbutil",
  "./styx/db/migration",
  "./styx/event-controllers",
  "./styx/event-controllers/arm/styx-gic",
  "./styx/event-controllers/arm/styx-nvic",
  "./styx/event-controllers/ppc/styx-mpc866m",
  "./styx/generated/styx-cyclone-v-hps-sys",
  "./styx/generated/styx-mk21f12-sys",
  "./styx/generated/styx-stm32f107-sys",
  "./styx/generated/styx-stm32f429-sys",
  "./styx/generated/styx-stm32f405-sys",
  "./styx/generated/styx-stm32f745-sys",
  "./styx/generated/styx-blackfin-sys",
  "./styx/integration-tests",
  "./styx/peripherals",
  "./styx/peripherals/styx-base-clock",
  "./styx/peripherals/styx-uart",
  "./styx/plugins",
  "./styx/plugins/styx-debug-tools",
  "./styx/plugins/styx-fuzzer",
  "./styx/plugins/styx-gdbserver",
  "./styx/plugins/styx-trace-plugin",
  "./styx/plugins/tracing-plugins",
  "./styx/processors",
  "./styx/processors/aarch64/styx-aarch64-processor",
  "./styx/processors/arm/styx-cyclonev-processor",
  "./styx/processors/arm/styx-kinetis21-processor",
  "./styx/processors/arm/styx-stm32f107-processor",
  "./styx/processors/arm/styx-stm32f405-processor",
  "./styx/processors/bfin/styx-blackfin-processor",
  "./styx/processors/ppc/styx-powerquicci-processor",
  "./styx/processors/ppc/styx-ppc4xx-processor",
  "./styx/workspace-hack",
  "./styx/services/styx-emulation-service",
  "./styx/services/styx-emulation-registry-service",
  "./styx/services/styx-traceapp-service",
  "./styx/services/styx-workspace-service",
  "./extensions/dt-stats",
  "./extensions/styx-ptrace",
  "./extensions/typhunix/rust/typhunix-client",
  "./extensions/typhunix/rust/typhunix-config",
  "./extensions/typhunix/rust/typhunix-macros",
  "./extensions/typhunix/rust/typhunix-proto",
  "./extensions/typhunix/rust/typhunix-python-bindings",
  "./extensions/typhunix/rust/typhunix-server",
]


# only build the core libs by default
default-members = ["./util/xtask", "./styx/core"]

# follow 2021 default
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.77.1"
version = "1.2.0"

[workspace.lints.rust]
# we forbid ignoring #[must_use] as it should be, too many async things get messed up
unused_must_use = "deny"
# FIXME: We need to remove this. See ticket #426
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(asan)',
  'cfg(miri)',
  'cfg(coverage,coverage_nightly)',
] }

[workspace.lints.rustdoc]
# allow linking to private things, users arent the only people that like documentation
# we can revisit it later when its a problem
private_intra_doc_links = "allow"
broken_intra_doc_links = "deny"
invalid_html_tags = "deny"
bare_urls = "deny"
redundant_explicit_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_rust_codeblocks = "deny"
unescaped_backticks = "deny"

[workspace.lints.clippy]
# forbid accidentally dropping a future (won't get polled)
let_underscore_future = "deny"
# while clippy likes this bc "its shorter", its less readable at a glance in some cases
bool_assert_comparison = "allow"

[workspace.dependencies]


# paths to core libs
styx-emulator = { path = "./styx" }
styx-core = { path = "./styx/core" }

# app config
typhunix-config = { path = "extensions/typhunix/rust/typhunix-config" }
gdbstub = "0.7.3"
gdbstub_arch = "0.3.1"
gdbmi = { git = "https://github.com/lockbox/gdb-client", branch = "main" }

# testing
test-case = "3.3.1"
test-log = "0.2.16"
tempfile = "3.13.0"
temp-dir = "0.1.16"
loom = "0.7.2"
shuttle = "0.8"
mockall = "0.13"
keystone-engine = { package = "keystone", git = "https://github.com/lockbox/keystone", branch = "build-fixes" }
criterion = { version = "0.5", features = ["html_reports"] }
compiletest_rs = { version = "0.11" }
testcontainers-modules = { version = "0.11" }
expect-test = "1.5.0"

# logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "fmt",
  "registry",
  "env-filter",
] }
tracing-appender = "0.2.3"
pretty_env_logger = "0.5.0"
env_logger = "0.11"
console-subscriber = "0.4"
tracing-tracy = { version = "0.11", default-features = false, features = [
  "system-tracing",
  "context-switch-tracing",
  "enable",
  "code-transfer",
  "only-localhost",
  "ondemand",
  "fibers",
] }
opentelemetry = { version = "0.26", features = ["trace"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.26", features = [
  "grpc-tonic",
  "trace",
  "tokio",
] }
tracing-opentelemetry = "0.27"
log = "0.4.22"

# utilities
convert_case = { version = "0.7.1" }
unicorn-engine = { version = "=2.1.2", features = [
  "arch_arm",
  "arch_aarch64",
  "arch_mips",
  "arch_ppc",
], default-features = false }
libafl = { version = "0.13.2" }
libafl_bolts = { version = "0.13.2" }
once_cell = "1.20"
lazy_static = "1.5"
enum_dispatch = "0.3.13"
anyhow = "1.0.93"
thiserror = "2.0.0"
beau_collector = "0.2.1"
clap = { version = "4.5.20", features = ["derive"] }
getset = "0.1.3"
paste = "1.0.15"
derivative = "2.2.0"
embed-doc-image = "0.1.4"
rand = "0.8.5"
derive_more = { version = "1.0", features = ["full"] }
confique = { version = "0.3.0", features = ["yaml", "toml", "json5"] }
url = "2.5.3"
glob = "0.3.1"
envy = "0.4.2"
goblin = "0.9"
globwalk = "0.9.1"
walkdir = "2.5.0"
copy_dir = "0.1.3"
diffy = "0.4.0"
rayon = "1.10"
vcell = "0.1.3"
cc = { version = "1", features = [
  "parallel",
] } # Enables parallel building for cxx
cxx = "1.0.129"
cxx-build = "1.0.129"
enum-as-inner = "0.6.1"
bytes = { version = "1.8.0", features = ["serde"] }
strum = "0.26.3"
strum_macros = "0.26.4"
chrono = { version = "0.4.38", features = ["serde"] }
heck = "0.5.0"
bitfield-struct = "0.9.2"
binrw = "0.14.1"
num_enum = "0.7.3"
tap = "1.0.1"
toml_edit = "0.22.22"
static_assertions = "1.1.0"
as-any = "0.3.2"
ref-cast = "1.0.24"
replace_with = "0.1.8"
codesort = "1.0.0"
lazy-regex = "3.4.1"
termimad = "0.33.0"
fdt = "0.1.5"
polonius-the-crab = "0.4.2"

# data structures
bilge = "0.2.0"
binary-heap-plus = "0.5.0"
arbitrary-int = "1.2"
num = "0.4"
num-traits = "0.2.19"
num-derive = "0.4"
bitflags = "2.6"
ipmpsc = "0.5.1"
rustc-hash = "2.0.0"
half = "2.4.1"
vector-map = "1.0.1"
smallvec = "1.13.2"
iset = "0.3.0"
enum-map = "2.7.3"
regex = "1.11.1"
h2 = "0.4.6"
zstd = "0.13.2"
# used in pcode cache
# we don't need ahash, sync (parking_lot), or stats so disable here
quick_cache = { version = "0.6.14", default-features = false }

# macros
proc-macro2 = "1.0.89"
syn = "2.0.87"
quote = "1.0.37"
typhunix-macros = { path = "extensions/typhunix/rust/typhunix-macros" }
delegate = "0.13.3"

# serialization
serde_json = "1.0.132"
serde_yaml = "0.9.34"
serde = { version = "1.0.214", features = ["derive"] }
serde_derive = "1.0.214"
bitflags_serde_shim = "0.2.5"

# bindings
pyo3 = "0.25.0"
bindgen = "0.70.1"

# async
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
futures-lite = "2.4.0"
async-trait = "0.1.83"
async-stream = "0.3.6"
tower-service = "0.3.3"
tokio-stream = { version = "0.1.16", features = ["full"] }
tokio-timerfd = "0.2.0"
tokio-util = "0.7.12"
async-fs = "2.1.2"

# tonic / prost
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13.3"
prost-wkt-types = "0.6.0"

# process utils
nix = "0.30.1"
signal-hook = { version = "0.3.17", features = ["extended-siginfo"] }
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }

[workspace.dependencies.tokio]
version = "1.43"
features = [
  "rt",
  "macros",
  "tracing",
  "rt-multi-thread",
  "io-std",
  "io-util",
  "time",
  "test-util",
  "sync",
]

[workspace.dependencies.uuid]
version = "1.11.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[workspace.dependencies.sea-orm]
version = "1.1.1"
features = [
  "debug-print",
  "runtime-tokio-rustls", # "sqlx-mysql",
  "sqlx-postgres",        # "sqlx-sqlite",
]

[workspace.dependencies.sea-orm-migration]
version = "1.1.1"
features = [
  "sea-orm-cli",
  "sqlx-postgres",
  "with-chrono",
  "with-json",
  "with-time",
  "with-uuid",
  "runtime-tokio-rustls",
  "with-bigdecimal",
  "with-rust_decimal",
]

[workspace.metadata.cargo-udeps.ignore]
normal = ["styx-workspace-hack"]

# all the things, takes a very long time to build
[profile.distribution]
inherits = "release"
opt-level = 3
lto = "fat"
strip = "symbols"
debug = "full"
split-debuginfo = "true"
debug-assertions = false
overflow-checks = false
codegen-units = 1

# useful when running flame graph with benches
[profile.bench]
debug = "full"
inherits = "release"
