[package]
name = "debugging-with-gdb"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
styx-emulator = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
styx-workspace-hack = { version = "0.1", path = "../../styx/workspace-hack" }

[features]
default = []
tracy = ["styx-emulator/tracy"]
