[package]
name = "kinetis-interrupt-analysis"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[build-dependencies]
styx-core = { workspace = true }

[dependencies]
styx-workspace-hack = { version = "0.1", path = "../../styx/workspace-hack" }
