[package]
name = "multiple-processors"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
styx-emulator = { workspace = true }
styx-workspace-hack = { version = "0.1", path = "../../styx/workspace-hack" }

[lints]
workspace = true
