[package]
name = "ppc405-freertos-demo"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
styx-emulator = { workspace = true }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.28.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
styx-workspace-hack = { version = "0.1", path = "../../styx/workspace-hack" }
tui-logger = "0.14.1"
