[package]
name = "styx-be-arm-processor"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
styx-emulator = { workspace = true }
styx-core = { workspace = true }
keystone-engine = { workspace = true }
styx-workspace-hack = { version = "0.1", path = "../../styx/workspace-hack" }
tracing = { workspace = true }


[lints]
workspace = true
