[package]
name = "styx-processors"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
unicorn-backend = [
  "styx-core/unicorn-backend",
  "styx-stm32f107-processor/unicorn-backend",
  "styx-stm32f405-processor/unicorn-backend",
  "styx-kinetis21-processor/unicorn-backend",
  "styx-cyclonev-processor/unicorn-backend",
  "styx-powerquicci-processor/unicorn-backend",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
styx-aarch64-processor = { path = "./aarch64/styx-aarch64-processor" }
styx-stm32f107-processor = { path = "./arm/styx-stm32f107-processor" }
styx-stm32f405-processor = { path = "./arm/styx-stm32f405-processor" }
styx-kinetis21-processor = { path = "./arm/styx-kinetis21-processor" }
styx-cyclonev-processor = { path = "./arm/styx-cyclonev-processor" }
styx-powerquicci-processor = { path = "./ppc/styx-powerquicci-processor" }
styx-ppc4xx-processor = { path = "./ppc/styx-ppc4xx-processor" }
styx-blackfin-processor = { path = "./bfin/styx-blackfin-processor" }
styx-superh2a-processor = { path = "./superh/styx-superh2a-processor" }
styx-core = { workspace = true }
styx-event-controllers = { path = "../event-controllers" }
styx-workspace-hack = { version = "0.1", path = "../workspace-hack" }
styx-uconf = { path = "../../incubation/styx-uconf" }

thiserror = { workspace = true }
tokio = { workspace = true }
